Apps Script 추가 시작

--- a/190413_GoogleDrive_JunHyeong/google_drive_tutorial.ipynb
+++ b/190413_GoogleDrive_JunHyeong/google_drive_tutorial.ipynb
@@ -66,9 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# -*- coding: utf-8 -*-\n",
@@ -87,7 +85,9 @@
     "\n",
     "# SCOPES에 들어가는 값들은 다음 URL을 참조: https://developers.google.com/drive/api/v3/about-auth\n",
     "SCOPES = [\n",
-    "    \"https://www.googleapis.com/auth/drive\"\n",
+    "    \"https://www.googleapis.com/auth/drive\",\n",
+    "    \"https://www.googleapis.com/auth/spreadsheets\",\n",
+    "    \"https://www.googleapis.com/auth/script.external_request\",\n",
     "]\n",
     "\n",
     "creds = None\n",
@@ -148,18 +148,16 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "{'kind': 'drive#about',\n",
-      " 'storageQuota': {'usage': '989199205',\n",
-      "                  'usageInDrive': '989199205',\n",
-      "                  'usageInDriveTrash': '5503'}}\n"
+      " 'storageQuota': {'usage': '300069067381',\n",
+      "                  'usageInDrive': '300069067381',\n",
+      "                  'usageInDriveTrash': '212106980'}}\n"
      ]
     }
    ],
@@ -261,7 +259,7 @@
       "\n",
       "##### nextPageToken #####\n",
       "\n",
-      "~!!~AI9FV7S5VqiKETIZEDpR9dbC4ibrDxLayLpFdkyxtMfhkbd5_dmpc4zusmKD0i6vxZtqa5lm5wG63ZVTpKAhLmhx8GM5ygYYP6r0WPfsI93yWiielcccsGAXOg-fROqz7GHzx-xy7eyKya6OJ8OT1inJsj7m_GGSBCioSMmQNU_dpivY8OZ5HxIyYsX93s3YnJ8cfFSPv2DeYCrqNLDRVkOx4G3Q-GHvUWAm44ZHHUYaOcfphSBe_nacFthPnHrNNpRc8C0bA4dZAZOmS_PS5KoRRUGUwPOoawkGXaMvMDu1hd1mV9-a_jmzEZkhASOxU3AaX4o6QJ5oJjhohF_fm04rvYQOHwwB5mQeQ7iVPgAZvYwXFuI1TeQ=\n",
+      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSrxOeXcldt4DgHaooIx2IQV7fSVPVyhkboNef8ChCodXgO6DqDDGuQ2swQDQKgyQUdDfo_easO2EhDaqv3ZDwm7i04P6BQ5FRQlx6MmVDbXnltcIVQiClX4BS0SLZpKixmP0PW4=\n",
       "\n",
       "##### List of Metadata #####\n",
       "\n",
@@ -320,9 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -507,7 +503,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1-1eaC7w_3vaxDZrleLmp79_tGwHvwXqd', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1MSRaDXDkd5UcYIMO3OKNoF6QEkqL3iRn', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -551,7 +547,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '16cZLUqG-LmSdOm9VPZ8B4mu2mwAo5Ibi', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '15duL5oek4YMAD9o7MDl_jRMYJx7blk34', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -600,7 +596,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '16cZLUqG-LmSdOm9VPZ8B4mu2mwAo5Ibi', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '15duL5oek4YMAD9o7MDl_jRMYJx7blk34', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -679,9 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -713,7 +707,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'id': '1Vq1LEZ19uJ1PSMk5OhF210L1kyWj3OwD',\n",
+      "{'id': '1UMZ3Xd4s1BZsDbzHFf4FYfyMLvYHRWPg',\n",
       " 'kind': 'drive#file',\n",
       " 'mimeType': 'application/octet-stream',\n",
       " 'name': 'day_005930.bry'}\n"
@@ -834,9 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1132,9 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1144,10 +1134,10 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'id': '1FF-vhsVAZxHxu4lIYR4jA4ZJz7W3I6e0k6NiEe-D1yw',\n",
+      "{'id': '19aRfT_8xRatsX6L_FrwbFEMbw7QR2lMtrRVP0vTp5qc',\n",
       " 'kind': 'drive#file',\n",
       " 'mimeType': 'application/vnd.google-apps.spreadsheet',\n",
-      " 'name': 'codetbl_20190413'}\n"
+      " 'name': 'codetbl_20190718'}\n"
      ]
     }
    ],
@@ -1199,7 +1189,7 @@
       "\n",
       "##### Update Result #####\n",
       "\n",
-      "{'spreadsheetId': '1FF-vhsVAZxHxu4lIYR4jA4ZJz7W3I6e0k6NiEe-D1yw',\n",
+      "{'spreadsheetId': '19aRfT_8xRatsX6L_FrwbFEMbw7QR2lMtrRVP0vTp5qc',\n",
       " 'updatedCells': 15,\n",
       " 'updatedColumns': 3,\n",
       " 'updatedRange': \"'시트1'!A1:C5\",\n",
@@ -1252,8 +1242,8 @@
       "\n",
       "##### Append Result #####\n",
       "\n",
-      "{'spreadsheetId': '1FF-vhsVAZxHxu4lIYR4jA4ZJz7W3I6e0k6NiEe-D1yw',\n",
-      " 'updates': {'spreadsheetId': '1FF-vhsVAZxHxu4lIYR4jA4ZJz7W3I6e0k6NiEe-D1yw',\n",
+      "{'spreadsheetId': '19aRfT_8xRatsX6L_FrwbFEMbw7QR2lMtrRVP0vTp5qc',\n",
+      " 'updates': {'spreadsheetId': '19aRfT_8xRatsX6L_FrwbFEMbw7QR2lMtrRVP0vTp5qc',\n",
       "             'updatedCells': 6,\n",
       "             'updatedColumns': 3,\n",
       "             'updatedRange': \"'시트1'!A6:C7\",\n",
@@ -1277,6 +1267,336 @@
     ").execute()\n",
     "\n",
     "print(\"\\n##### Append Result #####\\n\")\n",
+    "pprint.pprint(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Google Apps Script\n",
+    "***\n",
+    "\n",
+    "- Apps Script Reference: <https://developers.google.com/apps-script/reference/>\n",
+    "- Apps Script Rest API Reference: <https://developers.google.com/apps-script/api/reference/rest/>\n",
+    "\n",
+    "## 5.1. Google Apps Script API 사용설정\n",
+    "***\n",
+    "\n",
+    "![Google Apps Script API 사용설정](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/enable_apps_scripts.gif)\n",
+    "\n",
+    "\n",
+    "## 5.2. Script Service 객체 생성\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "script_service = build('script', 'v1', credentials=creds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.3. 간단한 예제\n",
+    "***\n",
+    "\n",
+    "### 5.3.1. 프로젝트의 번호\n",
+    "***\n",
+    "\n",
+    "[Google Cloud Platform](https://console.cloud.google.com/)에서 프로젝트 번호를 복사해둔다.\n",
+    "\n",
+    "![프로젝트의 번호](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/apps_script2.png)\n",
+    "\n",
+    "### 5.3.2. Google Apps Script 파일 생성 및 간단한 코드 작성\n",
+    "***\n",
+    "\n",
+    "아래의 코드를 붙여넣으세요.\n",
+    "\n",
+    "```{.javascript}\n",
+    "function foo() {\n",
+    "    return \"Hello World\";\n",
+    "}\n",
+    "\n",
+    "function sum(val1, val2) {\n",
+    "    return val1 + val2;\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "![Google Apps Script 파일 생성 및 간단한 코드 작성](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/apps_script1.gif)\n",
+    "\n",
+    "### 5.3.3. 프로젝트에 연결\n",
+    "***\n",
+    "\n",
+    "![프로젝트에 연결](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/apps_script3.gif)\n",
+    "\n",
+    "### 5.3.4. API 실행 가능으로 배포\n",
+    "***\n",
+    "\n",
+    "![API 실행 가능으로 배포](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/apps_script4.gif)\n",
+    "\n",
+    "### 5.3.5. foo() 함수 실행\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "##### Result #####\n",
+      "\n",
+      "{'done': True,\n",
+      " 'response': {'@type': 'type.googleapis.com/google.apps.script.v1.ExecutionResponse',\n",
+      "              'result': 'Hello World'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "SCRIPT_ID = \"M8AZHesa5Vvqk3_l6VPA3RKNCrmUsrArC\"\n",
+    "\n",
+    "request = {\n",
+    "    \"function\": \"foo\",\n",
+    "}\n",
+    "\n",
+    "response = script_service.scripts().run(body=request, scriptId=SCRIPT_ID).execute()\n",
+    "\n",
+    "print(\"\\n\\n##### Result #####\\n\")\n",
+    "pprint.pprint(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.3.6. sum() 함수 실행\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "##### Result #####\n",
+      "\n",
+      "{'done': True,\n",
+      " 'response': {'@type': 'type.googleapis.com/google.apps.script.v1.ExecutionResponse',\n",
+      "              'result': 3}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "SCRIPT_ID = \"M8AZHesa5Vvqk3_l6VPA3RKNCrmUsrArC\"\n",
+    "\n",
+    "request = {\n",
+    "    \"function\": \"sum\",\n",
+    "    \"parameters\": (1, 2),\n",
+    "}\n",
+    "\n",
+    "response = script_service.scripts().run(body=request, scriptId=SCRIPT_ID).execute()\n",
+    "\n",
+    "print(\"\\n\\n##### Result #####\\n\")\n",
+    "pprint.pprint(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.4. Google Sheets 읽기\n",
+    "***\n",
+    "\n",
+    "아래의 코드를 붙여넣으세요.\n",
+    "\n",
+    "```{.javascript}\n",
+    "// 모든 종목 마스터\n",
+    "function getAllCodeMaster() {\n",
+    "  var SPREAD_SHEET_ID = \"1PH9fjNRyKd0IqBiaZ3cDGhysmP3Y2241CHCEdt2nQrc\";\n",
+    "  //var sheet = SpreadsheetApp.openById(SPREAD_SHEET_ID).getSheetByName(\"시트1\");\n",
+    "  //var ret = sheet.getRange(\"A:D\").getValues();\n",
+    "  \n",
+    "  var sheet = SpreadsheetApp.openById(SPREAD_SHEET_ID).getSheetByName(\"시트1\");\n",
+    "  var code_masters = sheet.getRange(\"A:D\").getValues();\n",
+    "  var master_cnt = code_masters.length;\n",
+    "  \n",
+    "  var ret = [code_masters[0]]\n",
+    "  \n",
+    "  for ( var i=1 ; i<master_cnt ; i++ ) {\n",
+    "    if ( 0 == code_masters[i][0].length ) {\n",
+    "      break;\n",
+    "    }\n",
+    "    \n",
+    "    ret.push(code_masters[i]);\n",
+    "  }\n",
+    "  \n",
+    "  return ret;\n",
+    "}\n",
+    "\n",
+    "// market에 해당되는 종목 마스터\n",
+    "function getCodeMaster(market) {\n",
+    "  var code_masters = getAllCodeMaster();\n",
+    "  var master_cnt = code_masters.length;\n",
+    "  var ret = [code_masters[0]]\n",
+    "  \n",
+    "  for ( var i=1 ; i<master_cnt ; i++ ) {\n",
+    "    if ( market == code_masters[i][0] ) {\n",
+    "      ret.push(code_masters[i]);\n",
+    "    }\n",
+    "  }\n",
+    "  \n",
+    "  return ret;\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "### 5.4.1. 모든 Code Master 읽기\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "##### Result #####\n",
+      "\n",
+      "{'done': True,\n",
+      " 'response': {'@type': 'type.googleapis.com/google.apps.script.v1.ExecutionResponse',\n",
+      "              'result': [['market', 'fullcode', 'shtcode', 'name'],\n",
+      "                         ['kospi', 'KR7024890006', 'A024890', '대원화성'],\n",
+      "                         ['kospi', 'KR7024900003', 'A024900', '덕양산업'],\n",
+      "                         ['kosdaq', 'KR7024910002', 'A024910', '경창산업'],\n",
+      "                         ['kosdaq', 'KR7024940009', 'A024940', 'PN풍년'],\n",
+      "                         ['kosdaq', 'KR7024950008', 'A024950', '삼천리자전거'],\n",
+      "                         ['kospi', 'KR7025000001', 'A025000', 'KPX케미칼'],\n",
+      "                         ['kosdaq', 'KR7025320003', 'A025320', '시노펙스'],\n",
+      "                         ['kosdaq', 'KR7025440009', 'A025440', '대성엘텍'],\n",
+      "                         ['kospi', 'KR7025530007', 'A025530', 'SJM홀딩스'],\n",
+      "                         ['kospi', 'KR7025540006', 'A025540', '한국단자'],\n",
+      "                         ['kosdaq', 'KR7025550005', 'A025550', '한국선재'],\n",
+      "                         ['kospi', 'KR7025560004', 'A025560', '미래산업'],\n",
+      "                         ['kospi', 'KR7025750001', 'A025750', '한솔홈데코'],\n",
+      "                         ['kosdaq', 'KR7025770009', 'A025770', '한국정보통신'],\n",
+      "                         ['kospi', 'KR7025820002', 'A025820', '이구산업'],\n",
+      "                         ['kospi', 'KR7025860008', 'A025860', '남해화학'],\n",
+      "                         ['kosdaq', 'KR7025870007', 'A025870', '신라에스지'],\n",
+      "                         ['kosdaq', 'KR7025880006', 'A025880', '케이씨피드'],\n",
+      "                         ['kospi', 'KR7025890005', 'A025890', '한국주강'],\n",
+      "                         ['kosdaq', 'KR7025900002', 'A025900', '동화기업'],\n",
+      "                         ['kosdaq', 'KR7025950007', 'A025950', '동신건설'],\n",
+      "                         ['kosdaq', 'KR7025980004', 'A025980', '아난티'],\n",
+      "                         ['kosdaq', 'KR7026040006', 'A026040', '제이에스티나'],\n",
+      "                         ['kosdaq', 'KR7026150003', 'A026150', '특수건설'],\n",
+      "                         ['kosdaq', 'KR7026180000', 'A026180', '현대정보기술'],\n",
+      "                         ['kospi', 'KR7026890004', 'A026890', '디피씨'],\n",
+      "                         ['kosdaq', 'KR7026910000', 'A026910', '광진실업'],\n",
+      "                         ['kospi', 'KR7026940007', 'A026940', '부국철강'],\n",
+      "                         ['kospi', 'KR7026960005', 'A026960', '동서'],\n",
+      "                         ['kosdaq', 'KR7027040005', 'A027040', '서울전자통신'],\n",
+      "                         ['kosdaq', 'KR7027050004', 'A027050', '코리아나'],\n",
+      "                         ['kosdaq', 'KR7027360007', 'A027360', '아주IB투자'],\n",
+      "                         ['kospi', 'KR7027410000', 'A027410', 'BGF'],\n",
+      "                         ['kosdaq', 'KR7027580000', 'A027580', '상보'],\n",
+      "                         ['kosdaq', 'KR7027710003', 'A027710', '팜스토리'],\n",
+      "                         ['kospi', 'KR7027740000', 'A027740', '마니커'],\n",
+      "                         ['kosdaq', 'KR7027830009', 'A027830', '대성창투'],\n",
+      "                         ['kospi', 'KR7027970003', 'A027970', '세하']]}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "SCRIPT_ID = \"Mbqixy9u0xxM21bdIiFa5RzSSCJbs5uR3\"\n",
+    "\n",
+    "request = {\n",
+    "    \"function\": \"getAllCodeMaster\",\n",
+    "    \"devMode\": True,  # devMode가 True라면 Google Script를 배포하지 않고 저장만 해도 변경한 코드로 실행된다.\n",
+    "}\n",
+    "\n",
+    "response = script_service.scripts().run(body=request, scriptId=SCRIPT_ID).execute()\n",
+    "\n",
+    "print(\"\\n\\n##### Result #####\\n\")\n",
+    "pprint.pprint(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.4.1. Market에 해당되는 Code Master 읽기\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "##### Result #####\n",
+      "\n",
+      "{'done': True,\n",
+      " 'response': {'@type': 'type.googleapis.com/google.apps.script.v1.ExecutionResponse',\n",
+      "              'result': [['market', 'fullcode', 'shtcode', 'name'],\n",
+      "                         ['kospi', 'KR7024890006', 'A024890', '대원화성'],\n",
+      "                         ['kospi', 'KR7024900003', 'A024900', '덕양산업'],\n",
+      "                         ['kospi', 'KR7025000001', 'A025000', 'KPX케미칼'],\n",
+      "                         ['kospi', 'KR7025530007', 'A025530', 'SJM홀딩스'],\n",
+      "                         ['kospi', 'KR7025540006', 'A025540', '한국단자'],\n",
+      "                         ['kospi', 'KR7025560004', 'A025560', '미래산업'],\n",
+      "                         ['kospi', 'KR7025750001', 'A025750', '한솔홈데코'],\n",
+      "                         ['kospi', 'KR7025820002', 'A025820', '이구산업'],\n",
+      "                         ['kospi', 'KR7025860008', 'A025860', '남해화학'],\n",
+      "                         ['kospi', 'KR7025890005', 'A025890', '한국주강'],\n",
+      "                         ['kospi', 'KR7026890004', 'A026890', '디피씨'],\n",
+      "                         ['kospi', 'KR7026940007', 'A026940', '부국철강'],\n",
+      "                         ['kospi', 'KR7026960005', 'A026960', '동서'],\n",
+      "                         ['kospi', 'KR7027410000', 'A027410', 'BGF'],\n",
+      "                         ['kospi', 'KR7027740000', 'A027740', '마니커'],\n",
+      "                         ['kospi', 'KR7027970003', 'A027970', '세하']]}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "SCRIPT_ID = \"Mbqixy9u0xxM21bdIiFa5RzSSCJbs5uR3\"\n",
+    "MARKET_FLAG = \"kospi\"\n",
+    "\n",
+    "request = {\n",
+    "    \"function\": \"getCodeMaster\",\n",
+    "    \"parameters\": (MARKET_FLAG, ),\n",
+    "    \"devMode\": True,\n",
+    "}\n",
+    "\n",
+    "response = script_service.scripts().run(body=request, scriptId=SCRIPT_ID).execute()\n",
+    "\n",
+    "print(\"\\n\\n##### Result #####\\n\")\n",
     "pprint.pprint(response)"
    ]
   },
@@ -1308,5 +1628,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
