--- a/190413_GoogleDrive_JunHyeong/google_drive_tutorial.ipynb
+++ b/190413_GoogleDrive_JunHyeong/google_drive_tutorial.ipynb
@@ -142,7 +142,7 @@
     "\n",
     "사용자 정보, 사용량 등을 알 수 있다.  \n",
     "\n",
-    "참조: <https://developers.google.com/drive/api/v3/reference/about/get>"
+    "- 참조: <https://developers.google.com/drive/api/v3/reference/about/get>"
    ]
   },
   {
@@ -155,9 +155,9 @@
      "output_type": "stream",
      "text": [
       "{'kind': 'drive#about',\n",
-      " 'storageQuota': {'usage': '300069067381',\n",
-      "                  'usageInDrive': '300069067381',\n",
-      "                  'usageInDriveTrash': '212106980'}}\n"
+      " 'storageQuota': {'usage': '189447261754',\n",
+      "                  'usageInDrive': '189447261754',\n",
+      "                  'usageInDriveTrash': '0'}}\n"
      ]
     }
    ],
@@ -259,7 +259,7 @@
       "\n",
       "##### nextPageToken #####\n",
       "\n",
-      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSrxOeXcldt4DgHaooIx2IQV7fSVPVyhkboNef8ChCodXgO6DqDDGuQ2swQDQKgyQUdDfo_easO2EhDaqv3ZDwm7i04P6BQ5FRQlx6MmVDbXnltcIVQiClX4BS0SLZpKixmP0PW4=\n",
+      "~!!~AI9FV7S5VqiKETIZEDpR9dbC4ibrDxLayLpFdkyxtMfhkbd5_dmpc4zusmKD0i6vxZtqa5lm5wG63ZVTpKAhLmhx8GM5ygYYP6r0WPfsI93yWiielcccsGAXOg-fROqz7GHzx-xy7eyKya6OJ8OT1inJsj7m_GGSBCioSMmQNU_dpivY8OZ5HxIyYsX93s3YnJ8cfFSPv2DeYCrqNLDRVkOx4G3Q-GHvUWAm44ZHHUYaOcfphQ7e0-mg8F9FXCEXX0bZIUFRB-ryABxB_-yFXLmH0YbZk6IGX08NEvtOXHwrdjYaFm4Gxle3hUVy4Bhcu2dqeOmPtwm70XkIrw7YEvNVZ_-doQgjGJRkkcYfXAU7ncNUFAZoDRw=\n",
       "\n",
       "##### List of Metadata #####\n",
       "\n",
@@ -503,7 +503,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1MSRaDXDkd5UcYIMO3OKNoF6QEkqL3iRn', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1mWm3HMjiviY4_SyUr1O2b9zQs9bXN564', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -547,7 +547,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '15duL5oek4YMAD9o7MDl_jRMYJx7blk34', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1bBFNYy2y1brS7A91zyzpP-1rBRBZpk2Y', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -596,7 +596,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '15duL5oek4YMAD9o7MDl_jRMYJx7blk34', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1bBFNYy2y1brS7A91zyzpP-1rBRBZpk2Y', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -707,7 +707,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'id': '1UMZ3Xd4s1BZsDbzHFf4FYfyMLvYHRWPg',\n",
+      "{'id': '1un1yDvCoItoaR14RyX-lsiqZw5r60lS6',\n",
       " 'kind': 'drive#file',\n",
       " 'mimeType': 'application/octet-stream',\n",
       " 'name': 'day_005930.bry'}\n"
@@ -1134,10 +1134,10 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'id': '19aRfT_8xRatsX6L_FrwbFEMbw7QR2lMtrRVP0vTp5qc',\n",
+      "{'id': '1LWBrkGETKIdiVDuVHmCiYdNcObJSDEFFPK0hTeKqlLY',\n",
       " 'kind': 'drive#file',\n",
       " 'mimeType': 'application/vnd.google-apps.spreadsheet',\n",
-      " 'name': 'codetbl_20190718'}\n"
+      " 'name': 'codetbl_20190719'}\n"
      ]
     }
    ],
@@ -1189,7 +1189,7 @@
       "\n",
       "##### Update Result #####\n",
       "\n",
-      "{'spreadsheetId': '19aRfT_8xRatsX6L_FrwbFEMbw7QR2lMtrRVP0vTp5qc',\n",
+      "{'spreadsheetId': '1LWBrkGETKIdiVDuVHmCiYdNcObJSDEFFPK0hTeKqlLY',\n",
       " 'updatedCells': 15,\n",
       " 'updatedColumns': 3,\n",
       " 'updatedRange': \"'시트1'!A1:C5\",\n",
@@ -1242,8 +1242,8 @@
       "\n",
       "##### Append Result #####\n",
       "\n",
-      "{'spreadsheetId': '19aRfT_8xRatsX6L_FrwbFEMbw7QR2lMtrRVP0vTp5qc',\n",
-      " 'updates': {'spreadsheetId': '19aRfT_8xRatsX6L_FrwbFEMbw7QR2lMtrRVP0vTp5qc',\n",
+      "{'spreadsheetId': '1LWBrkGETKIdiVDuVHmCiYdNcObJSDEFFPK0hTeKqlLY',\n",
+      " 'updates': {'spreadsheetId': '1LWBrkGETKIdiVDuVHmCiYdNcObJSDEFFPK0hTeKqlLY',\n",
       "             'updatedCells': 6,\n",
       "             'updatedColumns': 3,\n",
       "             'updatedRange': \"'시트1'!A6:C7\",\n",
@@ -1277,6 +1277,7 @@
     "# 5. Google Apps Script\n",
     "***\n",
     "\n",
+    "- G Suite Developer Hub: <https://script.google.com/home>\n",
     "- Apps Script Reference: <https://developers.google.com/apps-script/reference/>\n",
     "- Apps Script Rest API Reference: <https://developers.google.com/apps-script/api/reference/rest/>\n",
     "\n",
@@ -1316,9 +1317,10 @@
     "### 5.3.2. Google Apps Script 파일 생성 및 간단한 코드 작성\n",
     "***\n",
     "\n",
-    "아래의 코드를 붙여넣으세요.\n",
+    "### 아래의 코드를 붙여넣으세요.\n",
+    "***\n",
     "\n",
-    "```{.javascript}\n",
+    "```\n",
     "function foo() {\n",
     "    return \"Hello World\";\n",
     "}\n",
@@ -1327,6 +1329,8 @@
     "    return val1 + val2;\n",
     "}\n",
     "```\n",
+    "\n",
+    "***\n",
     "\n",
     "![Google Apps Script 파일 생성 및 간단한 코드 작성](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/apps_script1.gif)\n",
     "\n",
@@ -1364,7 +1368,7 @@
     }
    ],
    "source": [
-    "SCRIPT_ID = \"M8AZHesa5Vvqk3_l6VPA3RKNCrmUsrArC\"\n",
+    "SCRIPT_ID = \"MTxFbjCdNl4yxnsdpNBwab6NCrmUsrArC\"\n",
     "\n",
     "request = {\n",
     "    \"function\": \"foo\",\n",
@@ -1404,7 +1408,7 @@
     }
    ],
    "source": [
-    "SCRIPT_ID = \"M8AZHesa5Vvqk3_l6VPA3RKNCrmUsrArC\"\n",
+    "SCRIPT_ID = \"MTxFbjCdNl4yxnsdpNBwab6NCrmUsrArC\"\n",
     "\n",
     "request = {\n",
     "    \"function\": \"sum\",\n",
@@ -1424,27 +1428,31 @@
     "## 5.4. Google Sheets 읽기\n",
     "***\n",
     "\n",
-    "아래의 코드를 붙여넣으세요.\n",
+    "- Spreadsheets Service Reference: <https://developers.google.com/apps-script/reference/spreadsheet/>\n",
     "\n",
-    "```{.javascript}\n",
+    "### 아래의 코드를 붙여넣으세요.\n",
+    "***\n",
+    "\n",
+    "```\n",
+    "// 읽을 스프레드 시트의 ID\n",
+    "var SPREAD_SHEET_ID = \"1PH9fjNRyKd0IqBiaZ3cDGhysmP3Y2241CHCEdt2nQrc\";\n",
+    "\n",
     "// 모든 종목 마스터\n",
     "function getAllCodeMaster() {\n",
-    "  var SPREAD_SHEET_ID = \"1PH9fjNRyKd0IqBiaZ3cDGhysmP3Y2241CHCEdt2nQrc\";\n",
-    "  //var sheet = SpreadsheetApp.openById(SPREAD_SHEET_ID).getSheetByName(\"시트1\");\n",
-    "  //var ret = sheet.getRange(\"A:D\").getValues();\n",
-    "  \n",
+    "  // 시트에서 데이터를 읽음\n",
     "  var sheet = SpreadsheetApp.openById(SPREAD_SHEET_ID).getSheetByName(\"시트1\");\n",
-    "  var code_masters = sheet.getRange(\"A:D\").getValues();\n",
-    "  var master_cnt = code_masters.length;\n",
+    "  var codeMasters = sheet.getRange(\"A:D\").getValues();\n",
+    "  var masterCnt = codeMasters.length;\n",
     "  \n",
-    "  var ret = [code_masters[0]]\n",
+    "  var ret = [codeMasters[0]]\n",
     "  \n",
-    "  for ( var i=1 ; i<master_cnt ; i++ ) {\n",
-    "    if ( 0 == code_masters[i][0].length ) {\n",
+    "  for ( var i=1 ; i<masterCnt ; i++ ) {\n",
+    "    // 빈칸이 나오면 그만\n",
+    "    if ( 0 == codeMasters[i][0].length ) {\n",
     "      break;\n",
     "    }\n",
     "    \n",
-    "    ret.push(code_masters[i]);\n",
+    "    ret.push(codeMasters[i]);\n",
     "  }\n",
     "  \n",
     "  return ret;\n",
@@ -1452,19 +1460,29 @@
     "\n",
     "// market에 해당되는 종목 마스터\n",
     "function getCodeMaster(market) {\n",
-    "  var code_masters = getAllCodeMaster();\n",
-    "  var master_cnt = code_masters.length;\n",
-    "  var ret = [code_masters[0]]\n",
+    "  // 시트에서 데이터를 읽음\n",
+    "  var sheet = SpreadsheetApp.openById(SPREAD_SHEET_ID).getSheetByName(\"시트1\");\n",
+    "  var codeMasters = sheet.getRange(\"A:D\").getValues();\n",
+    "  var masterCnt = codeMasters.length;\n",
     "  \n",
-    "  for ( var i=1 ; i<master_cnt ; i++ ) {\n",
-    "    if ( market == code_masters[i][0] ) {\n",
-    "      ret.push(code_masters[i]);\n",
+    "  var ret = [codeMasters[0]]\n",
+    "  \n",
+    "  for ( var i=1 ; i<masterCnt ; i++ ) {\n",
+    "    // 빈칸이 나오면 그만\n",
+    "    if ( 0 == codeMasters[i][0].length ) {\n",
+    "      break;\n",
+    "    }\n",
+    "    // 인자로 받은 market값에 해당되는 row만 return함\n",
+    "    else if ( market == codeMasters[i][0] ) {\n",
+    "      ret.push(codeMasters[i]);\n",
     "    }\n",
     "  }\n",
     "  \n",
     "  return ret;\n",
     "}\n",
     "```\n",
+    "\n",
+    "***\n",
     "\n",
     "### 5.4.1. 모든 Code Master 읽기\n",
     "***"
@@ -1545,7 +1563,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.4.1. Market에 해당되는 Code Master 읽기\n",
+    "### 5.4.2. Market에 해당되는 Code Master 읽기\n",
     "***"
    ]
   },
@@ -1598,6 +1616,229 @@
     "\n",
     "print(\"\\n\\n##### Result #####\\n\")\n",
     "pprint.pprint(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.5. Google Drive 사용\n",
+    "***\n",
+    "\n",
+    "- Drive Service Reference: <https://developers.google.com/apps-script/reference/drive/>\n",
+    "- Base Service Reference: <https://developers.google.com/apps-script/reference/base/>\n",
+    "- Properties Service Reference: <https://developers.google.com/apps-script/reference/properties/>\n",
+    "- Utilities Service Reference: <https://developers.google.com/apps-script/reference/utilities/>\n",
+    "\n",
+    "### 아래의 코드를 붙여넣으세요.\n",
+    "***\n",
+    "\n",
+    "```\n",
+    "// 저장할 폴더의 ID (전역변수)\n",
+    "var PARENT_FOLDER_ID = \"1nWQXXoOGoOIsEJk5GLvUmVqWACWy53Ho\";\n",
+    "\n",
+    "// Properties의 Key값 (마지막으로 저장한 파일의 ID, 전역변수)\n",
+    "var KEY_NAME_FILE_ID = \"file_id\";\n",
+    "\n",
+    "// plainTxt를 base64로 인코딩하여 저장\n",
+    "function writeText(plainTxt) {\n",
+    "  // 저장할 파일명\n",
+    "  var FILE_NAME = \"gs_write_test.txt\";\n",
+    "  \n",
+    "  // Base64로 인코딩\n",
+    "  var encodedTxt = Utilities.base64Encode(plainTxt, Utilities.Charset.UTF_8);\n",
+    "  \n",
+    "  // 파일로 저장\n",
+    "  var folderObj = DriveApp.getFolderById(PARENT_FOLDER_ID);\n",
+    "  var fileObj = folderObj.createFile(FILE_NAME, encodedTxt, MimeType.PLAIN_TEXT);\n",
+    "  var fileID = fileObj.getId();\n",
+    "  \n",
+    "  // Properties에 파일의 ID를 저장\n",
+    "  var userProperties = PropertiesService.getUserProperties();\n",
+    "  userProperties.setProperty(KEY_NAME_FILE_ID, fileID);\n",
+    "}\n",
+    "\n",
+    "// 저장한 txt를 읽음\n",
+    "function readText() {\n",
+    "  // Properties에서 마지막으로 저장된 파일의 ID를 불러옴\n",
+    "  var userProperties = PropertiesService.getUserProperties();\n",
+    "  var fileID = userProperties.getProperty(KEY_NAME_FILE_ID);\n",
+    "  \n",
+    "  // 파일을 읽음\n",
+    "  var fileObj = DriveApp.getFileById(fileID);\n",
+    "  var encodedBlob = fileObj.getAs(MimeType.PLAIN_TEXT);\n",
+    "  \n",
+    "  // Base64로 디코딩\n",
+    "  var encodedTxt = encodedBlob.getDataAsString();\n",
+    "  var decodedByteArr = Utilities.base64Decode(encodedTxt, Utilities.Charset.UTF_8);\n",
+    "  var decodedTxt = Utilities.newBlob(decodedByteArr).getDataAsString();\n",
+    "  \n",
+    "  return decodedTxt;\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "***\n",
+    "\n",
+    "### 5.5.1. 인자로 넘긴 문자열을 Base64로 인코딩하여 저장\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "##### Result #####\n",
+      "\n",
+      "{'done': True,\n",
+      " 'response': {'@type': 'type.googleapis.com/google.apps.script.v1.ExecutionResponse'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "SCRIPT_ID = \"M-9jrhCR6M_2IeH4q5VjZODSSCJbs5uR3\"\n",
+    "\n",
+    "request = {\n",
+    "    \"function\": \"writeText\",\n",
+    "    \"parameters\": (\"저장할 텍스트\", ),\n",
+    "    \"devMode\": True,\n",
+    "}\n",
+    "\n",
+    "response = script_service.scripts().run(body=request, scriptId=SCRIPT_ID).execute()\n",
+    "\n",
+    "print(\"\\n\\n##### Result #####\\n\")\n",
+    "pprint.pprint(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.5.2. 마지막으로 저장한 파일을 읽어서 Base64로 디코딩\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "##### Result #####\n",
+      "\n",
+      "{'done': True,\n",
+      " 'response': {'@type': 'type.googleapis.com/google.apps.script.v1.ExecutionResponse',\n",
+      "              'result': '저장할 텍스트'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "SCRIPT_ID = \"M-9jrhCR6M_2IeH4q5VjZODSSCJbs5uR3\"\n",
+    "\n",
+    "request = {\n",
+    "    \"function\": \"readText\",\n",
+    "    \"devMode\": True,\n",
+    "}\n",
+    "\n",
+    "response = script_service.scripts().run(body=request, scriptId=SCRIPT_ID).execute()\n",
+    "\n",
+    "print(\"\\n\\n##### Result #####\\n\")\n",
+    "pprint.pprint(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.5. 트리거\n",
+    "***\n",
+    "\n",
+    "### 아래의 코드를 붙여넣으세요.\n",
+    "***\n",
+    "\n",
+    "```\n",
+    "// 저장할 폴더의 ID (전역변수)\n",
+    "var PARENT_FOLDER_ID = \"1nWQXXoOGoOIsEJk5GLvUmVqWACWy53Ho\";\n",
+    "\n",
+    "// Properties의 Key값 (마지막으로 저장한 파일의 ID, 전역변수)\n",
+    "var KEY_NAME_FILE_ID = \"file_id\";\n",
+    "\n",
+    "function writeHello() {\n",
+    "  // Properties에서 마지막으로 저장된 파일의 ID를 불러옴\n",
+    "  var scriptProperties = PropertiesService.getScriptProperties();\n",
+    "  var fileID = scriptProperties.getProperty(KEY_NAME_FILE_ID);\n",
+    "  var isExistFile = false;\n",
+    "  \n",
+    "  // 파일이 있나 확인\n",
+    "  if ( null != fileID ) {\n",
+    "    try {\n",
+    "      DriveApp.getFileById(fileID);\n",
+    "      isExistFile = true;\n",
+    "    }\n",
+    "    catch (e) {\n",
+    "      isExistFile = false;\n",
+    "    }\n",
+    "  }\n",
+    "  \n",
+    "  // 저장된 파일이 없는 경우\n",
+    "  if ( null == fileID || !isExistFile ) {\n",
+    "    // 고급 Google 서비스 사용, 파일 생성\n",
+    "    var resource = {\n",
+    "      title: \"gs_write_test2\",\n",
+    "      mimeType: MimeType.GOOGLE_SHEETS,\n",
+    "      parents: [{\n",
+    "        id: PARENT_FOLDER_ID\n",
+    "      }]\n",
+    "    };\n",
+    "    \n",
+    "    var fileJson = Drive.Files.insert(resource);\n",
+    "    fileID = fileJson.id;\n",
+    "    \n",
+    "    // Properties에 FileID를 저장\n",
+    "    scriptProperties.setProperty(KEY_NAME_FILE_ID, fileID);\n",
+    "  }\n",
+    "  \n",
+    "  // 스프레드 시트에 날짜와 hello를 추가\n",
+    "  var spreadSheet = SpreadsheetApp.openById(fileID);\n",
+    "  spreadSheet.appendRow([\n",
+    "    new Date(),\n",
+    "    \"hello\"\n",
+    "  ]);\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "## 5.5.1. 고급 Google 서비스 사용 설정\n",
+    "***\n",
+    "\n",
+    "트리거와 상관없지만, 코드에서 고급 Google 서비스를 사용하기 때문에 사용 설정을 한다.\n",
+    "\n",
+    "![고급 Google 서비스 사용 설정](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/set_adv_gs.gif)\n",
+    "\n",
+    "## 5.5.2. 트리거 설정\n",
+    "***\n",
+    "\n",
+    "![트리거 설정](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/set_trigger.gif)\n",
+    "\n",
+    "## 5.5.3. 결과\n",
+    "***\n",
+    "\n",
+    "![결과](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/trigger_result.png)\n",
+    "\n",
+    "## 5.5.4. 트리거 삭제\n",
+    "***\n",
+    "\n",
+    "![트리거 삭제](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/del_trigger.gif)"
    ]
   },
   {
